Manual de usuario

--- a/Unidad6/ManualUsuario/Getting_Started.htm
+++ b/Unidad6/ManualUsuario/Getting_Started.htm
@@ -8,18 +8,69 @@
 <BODY>
 <style>
 	h2, h3   {color: blue;}
+	h4 {color: #422100}
 </style>
 
 
 <H2>Manual de Usuario DashBoard lortega</H2>
 Aplicación para la visualización de gráficos y informes de la empresa NorthWind
 
-<h3>Tipos de informes y gráficos</h3>
+<h3>Tipos de gráficos</h3>
 
+<img src="Empleados.png"/>
 <ul>
-<li>Op1</li>
-<li>Op2</li>
-<li>Op3</li>
+    <li>Total de ventas por empleado</li>
+    <li>Ventas totales por producto del empleado Nancy</li>
+    <li>Ventas totales por producto del empleado Janet</li>
+    <li>Ventas totales por producto del empleado Margaret</li>
+    <li>Ventas totales por producto del empleado Steve</li>
+    <li>Ventas totales por producto del empleado Michael</li>
+    <li>Ventas totales por producto del empleado Robert</li>
+    <li>Ventas totales por producto del empleado Laura</li>
+    <li>Ventas totales por producto del empleado Anne</li>
+    <li>Ventas totales por producto del empleado Andrew</li>
+</ul>
+
+<img src="Productos.png"/>
+<ul>
+   <li>Productos más vendidos superiores a 1.000 unidades</li>
+       <li>Productos más vendidos superiores a 500 unidades</li>
+       <li>Productos vendidos inferiores a 1.000 unidades</li>
+       <li>Productos vendidos inferiores a 500 unidades</li>
+       <li>Productos con stock menor de 10</li>
+       <li>Productos con stock menor de 20</li>
+       <li>Productos con stock menor de 40</li>
+       <li>Productos con stock menor de 80</li>
+       <li>Productos con stock menor de 100</li>
+</ul>
+
+<img src="Clientes.png"/>
+<ul>
+	<li>Ventas por clientes superiores a 10.000 euros</li>
+       <li>Ventas por clientes superiores a 20.000 euros</li>
+       <li>Ventas por clientes superiores a 40.000 euros</li>
+       <li>Ventas por clientes inferiores a 10.000 euros</li>
+       <li>Ventas por clientes inferiores a 5.000 euros</li>
+       <li>Ventas por clientes inferiores a 1.000 euros</li>
+       <li>Ventas por clientes inferiores a 500 euros</li>
+</ul>
+
+<img src="Envios.png"/>
+<ul>
+	<li>Ventas totales por compania de envío</li>
+       <li>Ventas totales por pais</li>
+       <li>Ventas totales por ciudad</li>
+</ul>
+
+<h3>Informes</h3>
+<img src="Informes.png"/>
+<ul>
+	<li>Ventas Totales Por Categoría y Año</li>
+       <li>Productos Comprados Por un Cliente</li>
+       <li>Ventas Totales por Cada Empleado</li>
+       <li>Ventas Totales por Clientes</li>
+       <li>Stocks de Productos</li>
+       <li>Total de Envios por Pais</li>
 </ul>
 
 </BODY>
