--- a/Unidad6/ManualUsuario/Licencia.htm
+++ b/Unidad6/ManualUsuario/Licencia.htm
@@ -31,5 +31,11 @@
     You should have received a copy of the GNU General Public License<br>
     along with this program.  If not, see <a href="https://www.gnu.org/licenses/">https://www.gnu.org/licenses/.</a>
 <p>
+
+<p>
+    Justificación del tipo de licencia seleccionada<br>
+     Se ha elegido este tipo de licencia porque permite que otros puedan mejorar el programa y acceder al código fuente para mejorarlo.
+<p>
+
 </BODY>
 </HTML>
