--- a/Unidad6/ManualUsuario/Getting_Started.htm
+++ b/Unidad6/ManualUsuario/Getting_Started.htm
@@ -73,5 +73,9 @@ Aplicación para la visualización de gráficos y informes de la empresa NorthWind
        <li>Total de Envios por Pais</li>
 </ul>
 
+
+<h3>Ayuda</h3>
+<img src="Ayuda.png"/>
+
 </BODY>
 </HTML>
