--- a/ManualUsuario/Getting_Started.htm
+++ b/ManualUsuario/Getting_Started.htm
@@ -13,8 +13,8 @@
 
 
 <H2>Manual de Usuario DashBoard lortega</H2>
-Aplicación para la visualización de gráficos y informes de la empresa NorthWind
-
+Aplicación para la visualización de gráficos y informes de la empresa NorthWind<br>
+<img src="DashBoard_lortega.png" width="850"/>
 <h3>Tipos de gráficos</h3>
 
 <img src="Empleados.png"/>
